--- a/faceio.html
+++ b/faceio.html
@@ -1,37 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-    <title>Registro Facial</title>
     <meta charset="UTF-8">
-    <script src="https://cdn.faceio.net/fio.js"></script>
+    <title>Registro Facial</title>
+    <script defer src="https://cdn.faceio.net/fio.js"></script>
 </head>
 <body>
 <h3 id="status">Cargando FaceIO...</h3>
 
 <script>
-    const faceio = new faceIO("fioa98da"); // Reemplazá con tu PUBLIC ID
+    document.addEventListener("DOMContentLoaded", function () {
+      const statusEl = document.getElementById("status");
+      if (!statusEl) {
+        console.error("Elemento con ID 'status' no encontrado.");
+        return;
+      }
 
-    window.onload = () => {
-        const status = document.getElementById("status");
-        if (!status) return;
+      statusEl.innerText = "Iniciando FaceIO...";
 
-        status.innerText = "Iniciando FaceIO...";
+      try {
+        const faceio = new faceIO("fioa98da"); // tu public ID
 
         faceio.enroll({
-            locale: "auto",
-            payload: {
-                email: "ejemplo@email.com",
-                userId: "123456",
-                username: "Usuario Prueba"
-            }
+          locale: "auto",
+          payload: {
+            email: "ejemplo@email.com",
+            userId: "123456",
+            username: "Usuario Prueba"
+          }
         }).then(userInfo => {
-            console.log("Usuario registrado:", userInfo);
-            status.innerText = "¡Registro exitoso!";
+          console.log("Usuario registrado:", userInfo);
+          statusEl.innerText = "¡Registro exitoso!";
         }).catch(err => {
-            console.error("Error al registrar rostro:", err);
-            status.innerText = "Error al registrar rostro: " + err.code;
+          console.error("Error al registrar rostro:", err);
+          statusEl.innerText = "Error al registrar rostro.";
         });
-    };
+
+      } catch (error) {
+        console.error("Fallo al iniciar FaceIO:", error);
+        statusEl.innerText = "Fallo al iniciar FaceIO.";
+      }
+    });
 </script>
 </body>
 </html>
